--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -2,10 +2,54 @@
   Main SASS file for realtime storage
 */
 body {
-  font-family: 'Open Sans', sans-serif; }
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  color: #333333; }
 
 h1 {
-  color: #205081; }
+  color: #205081;
+  font-size: 2.4em; }
+
+h2 {
+  color: #999999;
+  font-size: 1.6em; }
+
+a {
+  color: #3572b0;
+  text-decoration: none; }
+  a:hover {
+    text-decoration: underline; }
+
+section.login {
+  width: 70%;
+  margin: 0 auto;
+  height: 500px;
+  text-align: center; }
+  section.login h1 {
+    margin: 100px 0 40px 0; }
+  section.login h2 {
+    margin-bottom: 80px; }
+  section.login a {
+    color: #205081;
+    text-decoration: none;
+    padding: 40px;
+    border-radius: 4px;
+    border: 2px solid #205081;
+    margin: 0px 20px;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s; }
+    section.login a span {
+      font-size: 1.60em;
+      position: relative;
+      top: 5px; }
+    section.login a:hover {
+      color: white;
+      background-color: #205081; }
+
+footer {
+  text-align: center;
+  clear: both; }
 
 body {
   margin: 0; }
@@ -13,3 +57,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   display: block; }
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto; }
