--- a/app/assets/sass/_typography.scss
+++ b/app/assets/sass/_typography.scss
@@ -1,7 +1,24 @@
 body {
   font-family: 'Open Sans', sans-serif;
+  font-size:16px;
+  color:$text-color;
 }
 
 h1 {
   color:$brand-color;
+  font-size:2.4em;
+}
+
+h2 {
+  color:$light-grey;
+  font-size:1.6em;
+}
+
+a {
+  color:$link-color;
+  text-decoration:none;
+
+  &:hover {
+    text-decoration:underline;
+  }
 }
