Added oAuth using own system

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,9 +2,9 @@
 
   <h1>Real-time Document Storage</h1>
 
-  <h2>Login to your cloud storage account:</h2>
+  <h2>Login into your cloud storage account:</h2>
 
-  <a href="#/" title="Google Drive"><span class="icon-google-drive"></span></a>
+  <a href="#/" title="Google Drive" ng-click="googleLogin()"><span class="icon-google-drive"></span></a>
 
   <a href="#/" title="Dropbox"><span class="icon-dropbox"></span></a>
 
