Successfully retrieving file data when making an OAuth request to Google Docs

--- a/app/views/files.html
+++ b/app/views/files.html
@@ -1,6 +1,6 @@
 <section class="files">
 
-  <h3 ng-click="getFiles()">File Index:</h3>
+  <h3 ng-click="login()">File Index:</h3>
 
   {{ response }}
 
