Added routing for logged in users

--- a/app/views/files.html
+++ b/app/views/files.html
@@ -1,11 +1,9 @@
 <section class="files">
 
-  <h3 ng-click="login()">File Index:</h3>
-
-  {{ response }}
+  <h3>Google Drive File Listing</h3>
 
   <table>
-
+    
   </table>
 
 </section>
