--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -8,6 +8,7 @@ $light-grey: #999;
 $text-color: #333;
 $link-color: #3572b0;
 $border-grey: #D7D7D7;
+$light-brand: rgba(32, 80, 129, 0.15);
 
 // Imports
 @import "mixins";
