--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -60,18 +60,21 @@ section.files {
   width: 75%;
   margin: 0 auto; }
   section.files h3 {
-    margin: 40px 0 30px 0;
+    margin: 60px 0 30px 0;
     text-align: center;
     font-weight: 400;
     display: inline-block;
     color: #205081; }
+    section.files h3 span.last_loaded {
+      font-size: 12px;
+      color: #999999; }
   section.files .logout {
     font-size: 19px; }
   section.files button {
     border: 2px solid #205081;
     color: #205081;
     float: right;
-    margin: 35px 10px;
+    margin: 50px 10px;
     background-color: white;
     border-radius: 4px;
     font-size: 1.4em;
