Only show download link when there is a file extension (otherwise they are Google Documents and need to be exported to download)

--- a/app/views/files.html
+++ b/app/views/files.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="download">
-        <a href="{{ file.webContentLink }}" target="_blank">Download</a>
+        <a href="{{ file.webContentLink }}" target="_blank" ng-show="file.fileExtension">Download</a>
       </div>
 
     </li>
