--- a/app/views/_upload.html
+++ b/app/views/_upload.html
@@ -1,5 +1,5 @@
-<section class="upload">
+<section class="upload" ng-controller="uploadController">
 
-  <input type="file" name="new-file" accept=".jpg, .png, .pdf">
+  <!-- <input type="file" name="new-file" accept=".jpg, .png, .pdf"> -->
 
 </section>
