Successfully uploading files using the correct headers for a multipart request

--- a/app/views/_upload.html
+++ b/app/views/_upload.html
@@ -1,5 +1,6 @@
 <section class="upload" ng-controller="uploadController">
 
-  <!-- <input type="file" name="new-file" accept=".jpg, .png, .pdf"> -->
+  <input type="file" accept=".jpg, .png, .pdf" file-model="file"/>
+  <input type="submit" value="Upload" ng-click="upload()">
 
 </section>
