--- a/app/views/login.html
+++ b/app/views/login.html
@@ -6,6 +6,6 @@
 
   <a href="#/" title="Google Drive" ng-click="googleLogin()"><span class="icon-google-drive"></span></a>
 
-  <a href="#/" title="Dropbox"><span class="icon-dropbox"></span></a>
+  <!-- <a href="#/" title="Dropbox"><span class="icon-dropbox"></span></a> -->
 
 </section>
