--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -117,6 +117,26 @@ section.files {
     section.files li.header:hover {
       background-color: transparent; }
 
+#loading-bar .bar {
+  background: #205081; }
+
+div.fading-circle-spinner {
+  margin: 20px auto; }
+
+section.upload {
+  border-top: 1px solid #d7d7d7;
+  border-bottom: 1px solid #d7d7d7; }
+  section.upload h5 {
+    color: #205081;
+    margin: 10px 0; }
+  section.upload label {
+    font-size: 12px; }
+  section.upload input[type="file"] {
+    margin-bottom: 12px; }
+  section.upload .error {
+    color: #d43f3a;
+    font-weight: bold; }
+
 body {
   margin: 0; }
 
