--- a/app/assets/sass/_files.scss
+++ b/app/assets/sass/_files.scss
@@ -65,17 +65,23 @@ section.files {
       width:35%;
     }
 
-    .extension,
-    .download {
+    .extension {
       width:19%;
+    }
+
+    .download {
+      width:10%;
+      text-align:center;
+    }
+
+    .delete {
+      width:9%;
+      color:$error;
+      text-align:center;
     }
 
     .date {
       width:24%;
-    }
-
-    .download {
-      text-align:center;
     }
 
     &:hover {
